[package]
name = "to_do_cli"
version = "0.1.1"
edition = "2024"
default-run = "to_do_cli"
description = "Feature-rich command-line todo app with SQLite storage"
license = "LGPL-2.1"
readme = "README.md"
repository = "https://github.com/Dysfunctional-Human/ToDo-List"
homepage = "https://github.com/Dysfunctional-Human/ToDo-List"
documentation = "`https://docs.rs/to_do_cli"
keywords = ["todo", "cli", "task-manager", "sqlite"]
categories = ["command-line-utilities"]
exclude = ["todo.db", ".github/*"]

[dependencies]
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
